fix: fix MutationObserver stale closure and add contentAlignment end

--- a/packages/components/src/components/tabs/tabs.scss
+++ b/packages/components/src/components/tabs/tabs.scss
@@ -157,6 +157,13 @@ $pulse-gap-offset: calc(#{variables.$db-border-width-xs} + #{variables.$db-spaci
 				justify-content: center;
 			}
 		}
+
+		&[data-content-alignment="end"] {
+			.db-tab-item {
+				text-align: end;
+				justify-content: flex-end;
+			}
+		}
 	}
 
 	&[data-scroll-behavior="arrows"] {
